<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BarDroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="cont">Continuar</string>
    <string name="cancel">Cancelar</string>
    
<!--     activity_main -->
    <string name="welcome">Bienvenido a BarDroid</string>
	<string name="admin">Acceder como administrador</string>
	<string name="user">Acceder como usuario</string>
	<string name="about">Acerca de...</string>
	<string name="exit">Salir</string>
	
<!-- 	about -->
	<string name="about_title">Acerca de BarDroid</string>
	<string name="about_text">
	BarDroid es una aplicación de gestión para
	bares realizada como Proyecto de Fin de 
	Carrera por Luis Sedano, en la Universidad 
	de Salamanca, durante el curso 2012-2013</string>
	<string name="volver">Volver</string>
	
<!-- 	init_admin -->
	<string name="init_admin_title">Administrador</string>
	<string name="create">Crear cuenta</string>
	<string name="login">Login</string>
	<string name="off_admin">Utilizar offline (Bluetooth)</string>
	
<!-- 	init_user -->
	<string name="init_user_title">Usuario</string>
	<string name="join">Unirse a bar (Wi-Fi)</string>
	<string name="off_join">Unirse a bar (Bluetooth)</string>
	
<!-- 	create_account -->
<!-- 	se usa también el create de init_admin -->
	<string name="name">Nombre del bar</string>
	<string name="mail">Dirección de correo electrónico</string>
	<string name="pass">Contraseña</string>
	<string name="pass_again">Vuelva a introducir la contraseña</string>
	<string name="send">Enviar</string>
	
<!-- 	login_admin -->
	
<!-- 	login_user -->
	<string name="join_title">Unirse</string>
<!-- 	login_err -->
	<string name="retry">Reintentar</string>
	
<!-- 	config varios -->
	<string name="config_0_title">Configuración</string>	
	<string name="config_1_title">Configuración I: Barra </string>
	<string name="config_2_title">Configuración II: Mesas </string>
	<string name="config_3_title">Configuración</string>
	<string name="config_4_title">Configuración III: Productos </string>
	<string name="config_5_title">Configuración: Fin</string>	
	<string name="previous">Anterior</string>
	<string name="next">Siguiente</string>
	<string name="config_0">
	    Bienvenido al asistente de configuración de BarDroid. 
	    Por favor, complete todos los pasos para la correcta
	    personalización de la aplicación. Utilice las flechas 
	    de la parte superior para moverse a lo largo del asistente.
	</string>
	<string name="config_1">Toque donde desee colocar la barra</string>
	<string name="config_2">Toque donde desee colocar las mesas</string>
	<string name="config_3">¿Desea personalizar ahora los productos y categorias, 
	    o comenzar con los predefinidos? Si lo desea, puede modificarlos más adelante desde el propio salón</string>
	<string name="config_5">BarDroid ha sido configurado con éxito, continue para comenzar a utilizarlo</string>
	<string name="predet">Predefinidos</string>
	<string name="customize">Personalizar productos</string>
	
<!-- 	salon -->
	<string name="salon">Salón</string>
	
<!-- 	productos -->
	<string name="verprod">Ver productos</string>
	<string name="addprod">Añadir producto</string>
	<string name="modprod">Modificar producto</string>
	<string name="delprod">Eliminar producto</string>
	<string name="editprod">Editar producto</string>
	<string name="save">Guardar</string>
	<string name="prodname">Nombre del producto</string>
	<string name="prodprecio">Precio del producto</string>
	
<!-- 	menu -->

<string name="item1">Caja</string>
<string name="item2">Info. del bar</string>
<string name="item3">Editar productos</string>
<string name="item4">Editar mesas</string>
<string name="item5">Editar barra</string>
<string name="item6">Salir</string>
<string name="item7">Configuración</string>
<string name="logout">¿Desea cerrar sesión? Los tickets no guardados se perderán</string>
<string name="logout_title">Cerrar sesión</string>
<string name="si">Sí</string>
<string name="no">No</string>
<string name="salir_quest">¿Desea cerrar la aplicación?</string>
<string name="info1">Nombre del bar</string>
<string name="info3">Correo electrónico</string>
<string name="info5">Contraseña</string>
<string name="info_button">Mostrar</string>
<string name="info">Información del bar</string>
<string name="currlist">LISTA ACTUAL</string>
<string name="prodlist">LISTA DE PRODUCTOS</string>
<string name="listabarra">Lista</string>
<string name="caja">Caja</string>
<string name="totalhoy">Total del día:</string>
<string name="blank"> </string>
<string name="show">Mostrar tickets del día</string>
<string name="choosecon">¿Va a utilizar únicamente un dispositivo o varios?</string>
<string name="alone">Un dispositivo</string>
<string name="sevwifi">Varios dispositivos, conexión WiFi</string>
<string name="sevbt">Varios dispositivos, conexión Bluetooth</string>
<string name="config_35_title">Conexión</string>
<string name="title_paired_devices">Dispositivos vinculados</string>
<string name="title_other_devices">Otros dispositivos</string>
<string name="button_scan">Buscar dispositivos</string>
<string name="customizecat">Personalizar categorias</string>
<string name="vercat">Ver categorias</string>
<string name="addcat">Añadir categoria</string>
<string name="modcat">Modificar categoria</string>
<string name="delcat">Eliminar categoria</string>
<string name="editcat">Modificar categoria</string>
<string name="catname">Nombre de la categoria</string>
<string name="item31">Editar categorias</string>
<string name="deleteacc">Eliminar cuenta</string>
<string name="ask_delete">¿Desea eliminar su cuenta? Esta acción no se puede deshacer</string>
<string name="resumen">Generar resumen de caja</string>
<string name="textresumen">El resumen de caja se enviará a la dirección de correo utilizada para registrar el bar</string>
<string name="fechaini">Seleccione fecha de inicio</string>
<string name="fechafin">Seleccione fecha de fin</string>


</resources>