<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView android:id="@+id/info1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
                android:layout_gravity="center"
        
        android:text="@string/info1"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    
    <TextView android:id="@+id/info2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
                android:layout_gravity="center"
        
        android:gravity="center"
        />
    
    <TextView android:id="@+id/info3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
                android:layout_gravity="center"
        
        android:text="@string/info3"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    
    <TextView android:id="@+id/info4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
                android:layout_gravity="center"
        
        android:gravity="center"
        />
    
    <TextView android:id="@+id/info5"
        android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
        
        android:layout_height="wrap_content"
        android:text="@string/info5"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    
    <ToggleButton android:id="@+id/info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
                android:layout_gravity="center"
        
        android:textOff="@string/info_button"/>
    
    <Button android:id="@+id/exit_info"
        android:layout_width="fill_parent"
        android:padding="2dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/exit"/>

</LinearLayout>
