<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/textname" 
        android:text="@string/catname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
         />
    
    <EditText 
        android:id="@+id/editname"
        android:layout_width="fill_parent"
        android:layout_below="@id/textname"
        android:layout_height="wrap_content"
        android:inputType="text" 
     />
    
    <Button
	    android:id="@+id/button1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/editname"
	    android:layout_centerHorizontal="true"
	    android:visibility="invisible" />

	<Button
	    android:id="@+id/cancel_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/save_button"
	    android:layout_alignBottom="@+id/save_button"
	    android:layout_alignParentRight="true"
	    android:text="@string/cancel" />

	<Button
	    android:id="@+id/save_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/button1"
	    android:layout_alignBottom="@+id/button1"
	    android:layout_alignParentLeft="true"
	    android:text="@string/save" />
	    
</RelativeLayout>