<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood"
    tools:context=".MainActivity" >

     <LinearLayout  
               android:orientation="vertical"
               android:id="@+id/ad_layout"
               android:layout_width="fill_parent" 
               android:layout_height="wrap_content"> 
</LinearLayout> 

    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
         android:layout_below="@+id/ad_layout"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="Button"
            android:visibility="invisible" />

        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button6"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/admin" />

        <Button
            android:id="@+id/button2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/button6"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/user" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="2dp"
            android:text="@string/welcome"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>

</RelativeLayout>